@@ -22,6 +22,7 @@ using System;
 using System.IO;
 using zlib;
 using MySql.Data.MySqlClient.Properties;
+using MySql.Data.Common;
 
 namespace MySql.Data.MySqlClient
 {
@@ -38,10 +39,12 @@ namespace MySql.Data.MySqlClient
         private byte[] localByte;
         private byte[] inBuffer;
         private byte[] lengthBytes;
-        private WeakReference inBufferRef;
+//        private WeakReference inBufferRef;
+        private byte[] tmpBuffer;
+  //      private WeakReference tmpBufferRef;
         private int inPos;
         private int maxInPos;
-        private ZInputStream zInStream;
+        //private ZInputStream zInStream;
 
         public CompressedStream(Stream baseStream)
         {
@@ -49,7 +52,8 @@ namespace MySql.Data.MySqlClient
             localByte = new byte[1];
             lengthBytes = new byte[7];
 			cache = new MemoryStream();
-            inBufferRef = new WeakReference(inBuffer, false);
+//            inBufferRef = new WeakReference(inBuffer, false);
+  //          tmpBufferRef = new WeakReference(tmpBuffer, false);
         }
 
         #region Properties
@@ -120,19 +124,35 @@ namespace MySql.Data.MySqlClient
                 PrepareNextPacket();
 
             int countToRead = Math.Min(count, maxInPos - inPos);
-            int countRead;
-            if (zInStream != null)
-                countRead = zInStream.read(buffer, offset, countToRead);
-            else
-                countRead = baseStream.Read(buffer, offset, countToRead);
+            int countRead = countToRead;
+            try
+            {
+                Buffer.BlockCopy(inBuffer, inPos, buffer, offset, countToRead);
+            }
+            catch (Exception ex)
+            {
+                Console.WriteLine("inPos = " + inPos);
+                Console.WriteLine("offset = " + offset);
+                Console.WriteLine("count = " + countToRead);
+                throw;
+            }
+
+            //int countRead;
+            //if (zInStream != null)
+            //    countRead = zInStream.read(buffer, offset, countToRead);
+            //else
+            //    countRead = baseStream.Read(buffer, offset, countToRead);
             inPos += countRead;
 
             // release the weak reference
             if (inPos == maxInPos)
             {
                 zInStream = null;
-                inBufferRef.Target = inBuffer;
-                inBuffer = null;
+                if (!Platform.IsMono())
+                {
+                    inBufferRef = new WeakReference(inBuffer, false);
+                    inBuffer = null;
+                }
             }
 
             return countRead;
@@ -146,26 +166,60 @@ namespace MySql.Data.MySqlClient
             int unCompressedLength = lengthBytes[4] + (lengthBytes[5] << 8) +
                                      (lengthBytes[6] << 16);
 
+            bool compressed = unCompressedLength != 0;
             if (unCompressedLength == 0)
-            {
                 unCompressedLength = compressedLength;
-                zInStream = null;
-            }
+
+            //inBuffer = (byte[])inBufferRef.Target;
+            if (inBuffer == null || inBuffer.Length < unCompressedLength)
+                inBuffer = new byte[unCompressedLength];
+
+            if (compressed)
+                DecompressPacket(compressedLength, unCompressedLength);
             else
             {
-                ReadNextPacket(compressedLength);
-                MemoryStream ms = new MemoryStream(inBuffer);
-                zInStream = new ZInputStream(ms);
-                zInStream.maxInput = compressedLength;
+                ReadFully(inBuffer, compressedLength);
             }
+
+            //    ReadNextPacket(compressedLength);
+            //    MemoryStream ms = new MemoryStream(inBuffer);
+            //    zInStream = new ZInputStream(ms);
+            //    zInStream.maxInput = compressedLength;
+            //}
 
             inPos = 0;
             maxInPos = unCompressedLength;
         }
 
+        private void DecompressPacket(int compressedLength, int uncompressedLength)
+        {
+            // read the compressed bytes into
+            //tmpBuffer = (byte[])tmpBufferRef.Target;
+            if (tmpBuffer == null || tmpBuffer.Length < compressedLength)
+                tmpBuffer = new byte[compressedLength];
+
+            byte[] buf = new byte[compressedLength];
+            ReadFully(buf, compressedLength);
+            MemoryStream ms = new MemoryStream(buf);
+            ms.Position = 0;
+            ZInputStream zs = new ZInputStream(ms);
+
+            int pos = 0;
+            int lengthToRead = uncompressedLength;
+            int read = zs.read(inBuffer, pos, lengthToRead);
+            //while (read > 0)
+            //{
+            //    pos += read;
+            //    lengthToRead -= read;
+            //    read = zs.read(inBuffer, pos, lengthToRead);
+            //}
+        }
+
         private void ReadNextPacket(int len)
         {
-            inBuffer = (byte[])inBufferRef.Target;
+            if (!Platform.IsMono())
+                inBuffer = inBufferRef.Target as byte[];
+
             if (inBuffer == null || inBuffer.Length < len)
                 inBuffer = new byte[len];
             ReadFully(inBuffer, len);
